# oracle-client

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.hcl  docker-compose.yml
.github/workflows/: build.yaml  ci.yml
src/: attestation_scheduler.rs  main.rs
src/message_broadcaster/: http.rs  json.rs  log.rs  mod.rs
src/message_consumer/: log.rs  mod.rs
src/message_generator/: mod.rs
src/price_provider/: mod.rs
src/price_provider/gofer/: mod.rs  types.rs
src/signature_provider/: mod.rs  private_key.rs  random_key.rs
src/slot_provider/: clock.rs  mined_blocks.rs  mod.rs  slot.rs
test_data/: input.json
